# Granite

./: .gitignore  README.ko.md  README.md
vault-engine/: Cargo.toml
vault-engine/examples/: abi_layout_manifest.rs
vault-engine/fixtures/: read-abi-layout.json
vault-engine/src/: attachments.rs  benchmarks.rs  errors.rs  ffi.rs  file_watcher.rs  graph.rs  graph_key.rs  index.rs  index_rebuild.rs  indexing_pipeline.rs  indexing_queue.rs  lib.rs  parser.rs  paths.rs  read_api.rs  read_ffi.rs  save.rs  scanner.rs  sqlite_fts.rs  startup_reconciliation.rs  tantivy_search.rs  watcher_burst.rs
vault-engine/src/adapters/: mod.rs  tree_sitter_highlight.rs
vault-engine/src/adapters/fs/: index_directory.rs  markdown_reader.rs  mod.rs  note_writer.rs  path_resolver.rs  scanner.rs  watcher.rs
vault-engine/src/adapters/sqlite/: fts_index.rs  mod.rs  (+8 more)
vault-engine/src/core/: attachments.rs  document.rs  files.rs  graph.rs  links.rs  metadata.rs  mod.rs  paths.rs  scan.rs  search.rs  syntax_highlighting.rs
vault-engine/src/diagnostics/: abi_manifest.rs  benchmarks.rs  mod.rs  profiler.rs
vault-engine/src/ffi/: graph.rs  health.rs  json.rs  lifecycle.rs  mod.rs  panic.rs  read.rs  read_rows.rs  save.rs  strings.rs  syntax_highlighting.rs
vault-engine/src/use_cases/: build_graph.rs  highlight_code_fence.rs  index_freshness.rs  index_rebuild.rs  indexing_pipeline.rs  live_preview_metadata.rs  mod.rs  process_indexing_queue.rs  read_graph.rs  read_parse_documents.rs  read_types.rs  read_vault.rs  rebuild_tantivy.rs  reconcile_startup.rs  save_note.rs  watcher_burst.rs
(+362 files in other folders)
