[package]
name = "vault-engine"
version = "0.1.0"
edition = "2024"
publish = false
license = "AGPL-3.0-only"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
libc = "0.2"
rusqlite = { version = "0.39", features = ["bundled", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.25"

[dev-dependencies]
tempfile = "3"
