[package]
name = "vault-engine"
version = "0.1.0"
edition = "2024"
publish = false
license = "AGPL-3.0-only"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
libc = "0.2"
rusqlite = { version = "0.39", features = ["bundled", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.25"
tree-sitter = "0.26.9"
tree-sitter-bash = "0.25.1"
tree-sitter-css = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-swift = "0.7.3"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"

[dev-dependencies]
tempfile = "3"
